# mitsuba3

./: .gitignore  .polyscope.ini  avg.py  avg_of_avg.py  converter.py  cornel_box_test.py  exact_point_avg.py  gen_code.py  generate.py  helpers.py  imgui.ini  irrad_sensor_test.py  kitchen_viz.py  launch_gui.py  opt_lattents.py  opt_scene.py  planar_irrad_test.py  point_avg.py  polyscope_viz.py  pyproject.toml  reader.py  render_sun.py  renderer.py  requirements.txt  sd.py  sky_sampling.py  sky_weight.py  sorter.py  sunsky_test.py  test.py  test_150.exr  tex_maker.py
code_gen/: gen_code.py  new_unif.llvm  simple_sun.llvm
configs/: dragon-instaflow.yaml  dragon-sd3.yaml  dragon.yaml
gotex/: __init__.py  config.py  depth_integrator.py  logger.py  trainer.py  utils.py
gui/: controller.py  gotex_gui.py  gui_base.py
irradiance_compute/: irrad_fitter.py
kitchen/: kitchen_wallsblend.blend  scene.xml  scene_persp.xml
results/: average_of_average.exr  average_of_february.exr  average_of_january.exr  point_average.exr  real_average.exr  render_sun_complex.exr  render_sun_simple.exr  sky.exr  sunsky_test.exr  test.exr  test_200.exr  test_cuda.exr  test_double.exr  test_llvm.exr  test_scalar.exr  test_single.exr  test_single_1_5deg_aperture.exr  test_single_2deg_apeture.exr  time_test_cuda.txt  time_test_scalar.txt  updated_bitmap.exr
sampling_tests/: check_pdf.py  test_perf.py  test_renders.py  vizsky_contrib.py  warps.ipynb
scenes/: dragon.py
src/: flow_walker.py  opt_lattents.py  opt_scene.py  render_multiview.py  renderer.py  scheduler.py  sd.py  trainer.py
(+58 files in other folders)
