[project]
name = "GoTex"
version = "0.1.0"
description = "3D Texture generation based on Generative AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "polyscope>=2.6.1",
    "torch>=2.10.0",
    "torch-ema>=0.3",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
    "mitsuba@git+https://github.com/matttsss/mitsuba3",
    "tiktoken>=0.12.0",
    "sentencepiece>=0.2.1",
    "protobuf>=7.34.1",
]

[tool.uv]
package = false
